@@ -1,6 +1,8 @@
-$NetBSD: distinfo,v 1.9 2002/12/07 17:49:43 drochner Exp $
+$NetBSD: distinfo,v 1.10 2002/12/31 02:31:54 uebayasi Exp $
 
 SHA1 (xpdf-2.01.tar.gz) = 9c5633b937496bad9ef14031713e6c45b68b066c
 Size (xpdf-2.01.tar.gz) = 465004 bytes
+SHA1 (xpdf-2.01-patch1) = 031ceb5595ce5f07bc4c6081e46214ef0aea5a9d
+Size (xpdf-2.01-patch1) = 1038 bytes
 SHA1 (patch-aa) = bf57c8955a25fc723fdcc86acc2055876c39a686
 SHA1 (patch-ab) = e0e7bca53918c125db5dcece7153afbec6e089ce
